// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer renders snapshot when drawer is placed to the left 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: translateX(-356px);
    -moz-transform: translateX(-356px);
    -ms-transform: translateX(-356px);
    transform: translateX(-356px);
  }

  to {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

@keyframes animation-0 {
  from {
    -webkit-transform: translateX(-356px);
    -moz-transform: translateX(-356px);
    -ms-transform: translateX(-356px);
    transform: translateX(-356px);
  }

  to {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

@keyframes animation-1 {
  from {
    -webkit-transform: translateX(-600px);
    -moz-transform: translateX(-600px);
    -ms-transform: translateX(-600px);
    transform: translateX(-600px);
  }

  to {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

@keyframes animation-1 {
  from {
    -webkit-transform: translateX(-600px);
    -moz-transform: translateX(-600px);
    -ms-transform: translateX(-600px);
    transform: translateX(-600px);
  }

  to {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  outline: 0;
  overflow: hidden;
  pointer-events: all;
  width: calc(100vw - 64px);
  max-width: 356;
  -webkit-transform: translateX(
        -356px
      );
  -moz-transform: translateX(
        -356px
      );
  -ms-transform: translateX(
        -356px
      );
  transform: translateX(
        -356px
      );
  -webkit-animation: animation-0 200ms cubic-bezier(0, 0, 0.6, 1) forwards;
  animation: animation-0 200ms cubic-bezier(0, 0, 0.6, 1) forwards;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  bottom: 0;
  z-index: 9010;
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    width: min(
            calc(100vw - 64px),
            600px
          );
    -webkit-transform: translateX(
            -600px
          );
    -moz-transform: translateX(
            -600px
          );
    -ms-transform: translateX(
            -600px
          );
    transform: translateX(
            -600px
          );
    -webkit-animation: animation-1 200ms cubic-bezier(0, 0, 0.6, 1) forwards;
    animation: animation-1 200ms cubic-bezier(0, 0, 0.6, 1) forwards;
  }
}

.emotion-1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  margin: 0;
  padding: 0;
  outline: 0;
  border-style: solid;
  border-radius: 4px;
  border-width: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: background-color 125ms ease-out;
  transition: background-color 125ms ease-out;
  cursor: pointer;
  height: 36px;
  min-width: 36px;
  width: auto;
  font-size: 14px;
  color: #0075AD;
  background-color: transparent;
  border-color: transparent;
  position: absolute;
  top: 8px;
  right: 8px;
  z-index: 1;
  color: #05192D;
}

.emotion-1::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -4px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1:hover:not(:disabled) {
  background-color: rgba(5, 25, 45, 0.1);
}

.emotion-1:active:not(:disabled) {
  background-color: transparent;
}

.emotion-1:disabled {
  opacity: 0.6;
  cursor: default;
}

.emotion-2 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  color: #05192D;
  font-weight: 800;
  font-size: 18px;
  margin-bottom: 8px;
  line-height: 1.25;
  padding-top: 24px;
  padding-right: 48px;
  padding-bottom: 16px;
  padding-left: 24px;
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  padding-top: 0;
  padding-right: 24px;
  padding-bottom: 8px;
  padding-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  overflow-y: auto;
}

.emotion-4 {
  padding: 16px 24px;
  border-top: 1px solid rgba(5, 25, 45, 0.15);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 8px;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  margin: 0;
  padding: 0;
  outline: 0;
  border-style: solid;
  border-radius: 4px;
  border-width: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: background-color 125ms ease-out;
  transition: background-color 125ms ease-out;
  cursor: pointer;
  height: 36px;
  min-width: 36px;
  width: auto;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 14px;
  color: #05192D;
  background-color: #03EF62;
  border-color: transparent;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.emotion-5::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -4px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-5:hover:not(:disabled) {
  background-color: #00D649;
}

.emotion-5:active:not(:disabled) {
  background-color: #03EF62;
}

.emotion-5:disabled {
  opacity: 0.6;
  cursor: default;
}

.emotion-5:first-of-type {
  margin-right: auto;
}

.emotion-7 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  margin: 0;
  padding: 0;
  outline: 0;
  border-style: solid;
  border-radius: 4px;
  border-width: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: background-color 125ms ease-out;
  transition: background-color 125ms ease-out;
  cursor: pointer;
  height: 36px;
  min-width: 36px;
  width: auto;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 14px;
  color: #05192D;
  background-color: #03EF62;
  border-color: transparent;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.emotion-7::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -4px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-7:hover:not(:disabled) {
  background-color: #00D649;
}

.emotion-7:active:not(:disabled) {
  background-color: #03EF62;
}

.emotion-7:disabled {
  opacity: 0.6;
  cursor: default;
}

.emotion-7::after {
  box-shadow: 0 0 0 2px #009BD8;
}

.emotion-7:active:focus {
  background-color: #00D649;
}

.emotion-7:first-of-type {
  margin-right: auto;
}

<section
  aria-labelledby="drawer-title"
  aria-modal="true"
  class="emotion-0"
  data-testid="test-drawer"
  tabindex="-1"
>
  <button
    aria-label="Close"
    class="emotion-1"
  >
    CrossIcon
  </button>
  <h2
    class="emotion-2"
    id="drawer-title"
  >
    Fabulous Marillion Concert
  </h2>
  <div
    class="emotion-3"
  >
    Write a script for a jesters tear yourself.
  </div>
  <footer
    class="emotion-4"
  >
    <button
      class="emotion-5"
    >
      <span
        class="emotion-6"
      >
        Dismiss
      </span>
    </button>
    <button
      class="emotion-7"
      data-autofocus="true"
    >
      <span
        class="emotion-6"
      >
        Confirm
      </span>
    </button>
  </footer>
</section>
`;

exports[`Drawer renders snapshot when drawer is placed to the right 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: translateX(356px);
    -moz-transform: translateX(356px);
    -ms-transform: translateX(356px);
    transform: translateX(356px);
  }

  to {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

@keyframes animation-0 {
  from {
    -webkit-transform: translateX(356px);
    -moz-transform: translateX(356px);
    -ms-transform: translateX(356px);
    transform: translateX(356px);
  }

  to {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

@keyframes animation-1 {
  from {
    -webkit-transform: translateX(600px);
    -moz-transform: translateX(600px);
    -ms-transform: translateX(600px);
    transform: translateX(600px);
  }

  to {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

@keyframes animation-1 {
  from {
    -webkit-transform: translateX(600px);
    -moz-transform: translateX(600px);
    -ms-transform: translateX(600px);
    transform: translateX(600px);
  }

  to {
    -webkit-transform: translateX(0);
    -moz-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

.emotion-0 {
  position: fixed;
  top: 0;
  right: 0;
  outline: 0;
  overflow: hidden;
  pointer-events: all;
  width: calc(100vw - 64px);
  max-width: 356;
  -webkit-transform: translateX(
        356px
      );
  -moz-transform: translateX(
        356px
      );
  -ms-transform: translateX(
        356px
      );
  transform: translateX(
        356px
      );
  -webkit-animation: animation-0 200ms cubic-bezier(0, 0, 0.6, 1) forwards;
  animation: animation-0 200ms cubic-bezier(0, 0, 0.6, 1) forwards;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  bottom: 0;
  z-index: 9010;
}

@media screen and (min-width: 480px) {
  .emotion-0 {
    width: min(
            calc(100vw - 64px),
            600px
          );
    -webkit-transform: translateX(
            600px
          );
    -moz-transform: translateX(
            600px
          );
    -ms-transform: translateX(
            600px
          );
    transform: translateX(
            600px
          );
    -webkit-animation: animation-1 200ms cubic-bezier(0, 0, 0.6, 1) forwards;
    animation: animation-1 200ms cubic-bezier(0, 0, 0.6, 1) forwards;
  }
}

.emotion-1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  margin: 0;
  padding: 0;
  outline: 0;
  border-style: solid;
  border-radius: 4px;
  border-width: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: background-color 125ms ease-out;
  transition: background-color 125ms ease-out;
  cursor: pointer;
  height: 36px;
  min-width: 36px;
  width: auto;
  font-size: 14px;
  color: #0075AD;
  background-color: transparent;
  border-color: transparent;
  position: absolute;
  top: 8px;
  right: 8px;
  z-index: 1;
  color: #05192D;
}

.emotion-1::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -4px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1:hover:not(:disabled) {
  background-color: rgba(5, 25, 45, 0.1);
}

.emotion-1:active:not(:disabled) {
  background-color: transparent;
}

.emotion-1:disabled {
  opacity: 0.6;
  cursor: default;
}

.emotion-2 {
  color: #05192D;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  margin: 0;
  padding: 0;
  color: #05192D;
  font-weight: 800;
  font-size: 18px;
  margin-bottom: 8px;
  line-height: 1.25;
  padding-top: 24px;
  padding-right: 48px;
  padding-bottom: 16px;
  padding-left: 24px;
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  padding-top: 0;
  padding-right: 24px;
  padding-bottom: 8px;
  padding-left: 24px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  overflow-y: auto;
}

.emotion-4 {
  padding: 16px 24px;
  border-top: 1px solid rgba(5, 25, 45, 0.15);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 8px;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  margin: 0;
  padding: 0;
  outline: 0;
  border-style: solid;
  border-radius: 4px;
  border-width: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: background-color 125ms ease-out;
  transition: background-color 125ms ease-out;
  cursor: pointer;
  height: 36px;
  min-width: 36px;
  width: auto;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 14px;
  color: #05192D;
  background-color: #03EF62;
  border-color: transparent;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.emotion-5::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -4px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-5:hover:not(:disabled) {
  background-color: #00D649;
}

.emotion-5:active:not(:disabled) {
  background-color: #03EF62;
}

.emotion-5:disabled {
  opacity: 0.6;
  cursor: default;
}

.emotion-5:first-of-type {
  margin-right: auto;
}

.emotion-7 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-weight: 800;
  line-height: 1;
  margin: 0;
  padding: 0;
  outline: 0;
  border-style: solid;
  border-radius: 4px;
  border-width: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: background-color 125ms ease-out;
  transition: background-color 125ms ease-out;
  cursor: pointer;
  height: 36px;
  min-width: 36px;
  width: auto;
  padding-left: 16px;
  padding-right: 16px;
  font-size: 14px;
  color: #05192D;
  background-color: #03EF62;
  border-color: transparent;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.emotion-7::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -4px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-7:hover:not(:disabled) {
  background-color: #00D649;
}

.emotion-7:active:not(:disabled) {
  background-color: #03EF62;
}

.emotion-7:disabled {
  opacity: 0.6;
  cursor: default;
}

.emotion-7::after {
  box-shadow: 0 0 0 2px #009BD8;
}

.emotion-7:active:focus {
  background-color: #00D649;
}

.emotion-7:first-of-type {
  margin-right: auto;
}

<section
  aria-labelledby="drawer-title"
  aria-modal="true"
  class="emotion-0"
  data-testid="test-drawer"
  tabindex="-1"
>
  <button
    aria-label="Close"
    class="emotion-1"
  >
    CrossIcon
  </button>
  <h2
    class="emotion-2"
    id="drawer-title"
  >
    Fabulous Marillion Concert
  </h2>
  <div
    class="emotion-3"
  >
    Write a script for a jesters tear yourself.
  </div>
  <footer
    class="emotion-4"
  >
    <button
      class="emotion-5"
    >
      <span
        class="emotion-6"
      >
        Dismiss
      </span>
    </button>
    <button
      class="emotion-7"
      data-autofocus="true"
    >
      <span
        class="emotion-6"
      >
        Confirm
      </span>
    </button>
  </footer>
</section>
`;
